Fixing .button.glyph-icon in dark mode

--- a/src/main/java/com/dansoftware/libraryapp/gui/theme/global-dark.css
+++ b/src/main/java/com/dansoftware/libraryapp/gui/theme/global-dark.css
@@ -160,5 +160,5 @@ UPDATE VIEW
 custom
  */
 .button .glyph-icon {
-    -fx-fill: black;
+    /*-fx-fill: black;*/
 }
